--- a/iBank/iBank/Base.lproj/Main.storyboard
+++ b/iBank/iBank/Base.lproj/Main.storyboard
@@ -277,9 +277,6 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jyn-Z4-HJ9" userLabel="bottom">
                                         <rect key="frame" x="0.0" y="496" width="504" height="70"/>
                                         <subviews>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="通告图标-标准状态.png" translatesAutoresizingMaskIntoConstraints="NO" id="s02-4A-cJr">
-                                                <rect key="frame" x="8" y="12" width="51" height="46"/>
-                                            </imageView>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="点击公告图标-标准状态.png" translatesAutoresizingMaskIntoConstraints="NO" id="04y-mX-q68">
                                                 <rect key="frame" x="472" y="23" width="13" height="24"/>
                                             </imageView>
@@ -294,6 +291,9 @@
                                                     <action selector="onTouchSystemMsgButton:" destination="HB9-KG-zgv" eventType="touchUpInside" id="BwI-Uc-TlE"/>
                                                 </connections>
                                             </button>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="news.png" translatesAutoresizingMaskIntoConstraints="NO" id="s02-4A-cJr">
+                                                <rect key="frame" x="15" y="23" width="32" height="32"/>
+                                            </imageView>
                                         </subviews>
                                         <color key="backgroundColor" red="0.4823529411764706" green="0.76078431372549016" blue="0.8901960784313725" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </view>
@@ -1147,6 +1147,7 @@
         <image name="LOGO.png" width="256" height="129"/>
         <image name="back.png" width="28" height="28"/>
         <image name="default.png" width="95" height="128"/>
+        <image name="news.png" width="32" height="32"/>
         <image name="settingNormal.png" width="32" height="37"/>
         <image name="写消息-标准状态.png" width="35" height="29"/>
         <image name="刷新认证码-标准状态.png" width="30" height="30"/>
@@ -1165,6 +1166,5 @@
         <image name="输入框01.png" width="229" height="31"/>
         <image name="输入框02.png" width="100" height="31"/>
         <image name="选择日期-标准状态.png" width="31" height="31"/>
-        <image name="通告图标-标准状态.png" width="51" height="46"/>
     </resources>
 </document>
